executable('kattis-maxflow','kattis-maxflow.cpp',
    include_directories: my_includedir ,
    link_with: libmincostflow)

executable('kattis-mincostflow','kattis-mincostmaxflow.cpp',
    include_directories: my_includedir ,
    link_with: libmincostflow)

executable('kattis-shortestpath1','kattis-shortestpath1.cpp',
    include_directories: my_includedir ,
    link_with: libmincostflow)
