test('Vectorized Map',
    executable('vec-map','vec-map.cpp',
        include_directories: my_includedir,
        link_with: libmincostflow))

test('Shortest Path',
    executable('short-path','short-path.cpp',
        include_directories: my_includedir,
        link_with: libmincostflow))

test('Max Flow',
    executable('max-flow','max-flow.cpp',
        include_directories: my_includedir,
        link_with: libmincostflow))
